@@ -530,6 +530,9 @@ Release 2.8.0 - UNRELEASED
 
     HADOOP-11120. hadoop fs -rmr gives wrong advice. (Juliet Hougland via wang)
 
+    HADOOP-11911. test-patch should allow configuration of default branch
+    (Sean Busbey via aw)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
